# programming_paradigm

./: .gitignore  makefile  pylintrc  pyproject.toml  pytest.ini  readme.md
app/: main.py
app/backends/: abstract_shapes.py  api_clients.py  color_alpha.py  color_beta.py  shape_alpha.py  shape_api_clients.py  shape_beta.py
app/factories/: api_client.py  shape_reader.py  shape_writer.py
app/models/: color.py  shape.py
app/services/: color.py  shape.py
app/views/: colors.py  shapes.py  symbols.py
tests/: test_end_to_end.py
